Create a class for MoveList related functionality.